--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^5.1.0",
     "image-size": "^2.0.2",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pdfkit": "^0.17.1"
   }
 }
